# remofirst

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yml  init-db.sh  kafka-compose.yml  pyproject.toml  pytype.cfg
ci/: api.Dockerfile  consumer.Dockerfile  kafka.Dockerfile  zookeeper.Dockerfile
consumer/: .env  kafka_consumer.py
consumer/models/: models.py
consumer/repository/: connector.py
docs/: README.md
src/chatty/: manage.py
src/chatty/api/chat/: admin.py  models.py
src/chatty/api/chat/broker/: kafka_broker.py  kafka_consumer.py  kafka_producer.py
src/chatty/api/chat/domain/serializers/: serializers.py
src/chatty/api/chat/exceptions/: generic.py
src/chatty/api/chat/middlewares/: custom.py
src/chatty/api/chat/migrations/: 0001_initial.py  0002_alter_session_members.py
src/chatty/api/chat/routers/: urls.py  views.py
src/chatty/api/chat/websocket/: consumers.py  routers.py  serializer.py
src/chatty/api/user/: admin.py  models.py
src/chatty/api/user/domain/: entities.py
src/chatty/api/user/infrastructure/: apps.py
src/chatty/api/user/migrations/: 0001_initial.py
src/chatty/api/user/models/: base.py
src/chatty/api/user/repository/: base.py  user_repo_impl.py
src/chatty/api/user/routers/: urls.py  views.py
src/chatty/core/: settings.py  urls.py
src/chatty/core/infrastructure/: asgi.py  settings.py  wsgi.py
src/chatty/core/routers/: urls.py
volumes/db/pgdata/: postmaster.pid
volumes/db/pgdata/base/1/: 2619  pg_internal.init
volumes/db/pgdata/base/16384/: 1247  1249  1259  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16417  16423  16425  16432  16433  16434  16451  16456  16458  16460  16466  16470  16472  16500  16501  16507  16520  16521  16522  16525  16527  16528  16531  16533  16538  16540  (+37 more)
volumes/db/pgdata/base/5/: 2619  pg_internal.init
volumes/db/pgdata/global/: 1260  1262  2396  2397  2671  2676  pg_control  pg_internal.init
volumes/db/pgdata/pg_stat/: pgstat.stat
volumes/db/pgdata/pg_xact/: 0000
(+4 files in other folders)
